# MSc_Data_Science_Project

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements.txt
data/timeseries_model_files/: xgb_model_1.pkl  xgb_model_10.pkl  xgb_model_11.pkl  xgb_model_21.pkl  xgb_model_31.pkl  xgb_model_37.pkl  xgb_model_40.pkl  xgb_model_46.pkl  xgb_model_47.pkl  xgb_model_49.pkl  xgb_model_50.pkl  xgb_model_51.pkl  xgb_model_52.pkl  xgb_model_55.pkl  xgb_model_56.pkl  xgb_model_65.pkl  xgb_model_66.pkl  xgb_model_67.pkl  xgb_model_68.pkl  xgb_model_69.pkl  xgb_model_7.pkl  xgb_model_71.pkl  xgb_model_72.pkl  xgb_model_80.pkl  xgb_model_81.pkl
results/baseline/: evaluation_results.txt  evaluation_time.txt
results/baseline2/: evaluation_results.txt  evaluation_time.txt
results/baseline3/: evaluation_results.txt  evaluation_time.txt
results/experiment1/: evaluation_results.txt  evaluation_time.txt
results/experiment2/: evaluation_results.txt  evaluation_time.txt
results/experiment3/: evaluation_results.txt  evaluation_time.txt
results/experiment4/: evaluation_results.txt  evaluation_time.txt
src/evaluation/: download_resnet_models_and_sample_image.py  evaluation_data.csv  evaluation_results.txt  evaluation_time.txt  load_to_gpu_time.py  loading_manager_experiment1.py  loading_manager_experiment2.py  loading_manager_experiment4.py  model_serving_server_base.py  model_serving_server_base2.py  model_serving_server_base3.py  model_serving_server_experiment1.py  model_serving_server_experiment3.py  model_serving_server_experiment4.py  prediction_requester.py  test.py
src/notebooks/: binning_policy.ipynb  evaluation_analysis.ipynb  evaluation_analysis_experiment2.ipynb  feature_engineering.ipynb  get_evaluation_data.ipynb  (+7 more)
